fix(accessibility): increase contrast of primary color for selected items

--- a/src/app/pages/translate/input/button/button.component.scss
+++ b/src/app/pages/translate/input/button/button.component.scss
@@ -1,5 +1,12 @@
+@use '@angular/material' as mat;
+@use '../../../../../theme/variables' as theme;
+
 button {
   transition: background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media (prefers-color-scheme: light) {
+    color: mat.get-color-from-palette(theme.$app-primary, 800) !important;
+  }
 
   &.selected {
     background-color: rgba(66, 133, 244, 0.12);
